opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/samoht/metrics"
bug-reports:  "https://github.com/samoht/metrics/issues"
dev-repo:     "git+https://github.com/samoht/metrics.git"
doc:          "https://samoht.github.io/metrics/"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "dune" {build}
  "metrics"
  "lwt"
]
