opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Hannes Mehnert"]
license:      "ISC"
homepage:     "https://github.com/mirage/metrics"
bug-reports:  "https://github.com/mirage/metrics/issues"
dev-repo:     "git+https://github.com/mirage/metrics.git"
doc:          "https://mirage.github.io/metrics/"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "1.4"}
  "metrics" {= version}
  "metrics-influx" {= version}
  "ipaddr"
  "lwt"
  "mirage-clock" {>= "3.0.0"}
  "mirage-stack" {>= "2.0.0"}
  "cstruct"
  "logs"
]
synopsis: "Mirage backend for the Metrics library"
