opam-version: "2.0"
maintainer:   "team@robur.coop"
authors:      ["Reynir Bjoernsson" "Hannes Mehnert"]
license:      "ISC"
homepage:     "https://github.com/mirage/metrics"
bug-reports:  "https://github.com/mirage/metrics/issues"
dev-repo:     "git+https://github.com/mirage/metrics.git"
doc:          "https://mirage.github.io/metrics/"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.4"}
  "metrics" {= version}
  "logs"
  "fmt" {>= "0.8.7"}
]
conflicts: [ "result" {< "1.5"} ]
synopsis: "Resource usage (getrusage) sources for the Metrics library"
