opam-version: "2.0"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire"]
license:      "ISC"
homepage:     "https://github.com/mirage/metrics"
bug-reports:  "https://github.com/mirage/metrics/issues"
dev-repo:     "git+https://github.com/mirage/metrics.git"
doc:          "https://mirage.github.io/metrics/"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "1.4"}
  "uuidm" {>= "0.9.6"}
  "metrics" {= version}
  "mtime" {>= "1.0.0"}
  "lwt" {>= "2.4.7"}
  "metrics-lwt" {= version & with-test}
  "conf-gnuplot"
  "fmt" {>= "0.8.7"}
]
synopsis: "Unix backend for the Metrics library"
