opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
authors:      ["Thomas Gazagnaire" "Thomas Leonard"]
license:      "ISC"
homepage:     "https://github.com/mirage/metrics"
bug-reports:  "https://github.com/mirage/metrics/issues"
dev-repo:     "https://github.com/mirage/metrics.git"
doc:          "https://mirage.github.io/metrics/"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: ["jbuilder" "runtest" "-p" name]

depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "fmt"
  "mtime" {test}
]
